--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charlon Dale San Agustin - Portfolio</title>
+    <title>Saif Akhter - Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -90,7 +90,7 @@
 </head>
 <body>
     <header>
-        <h1>Charlon Dale San Agustin</h1>
+        <h1>Saif Akhter</h1>
         <p>Aspiring QA Engineer | Software Tester</p>
     </header>
 
@@ -104,8 +104,9 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Charlon Dale San Agustin, but you can call me Chad. I'm a dedicated Software Tester passionate about ensuring high-quality software products. In my free time, I enjoy learning about Software Testing, Automation Testing, and doing some Manual Testing as side gigs.</p>
-        <p>I'm always looking forward to chatting with others and diving into interesting discussions, especially about Software Testing things!</p>
+        <p>Hello! I'm Saif Akhter, a Software QA Engineer with 4+ years in software testing, focusing on seamless user experiences through robust strategies, manual/automated tests, and team collaboration.</p>
+        <p>Key projects include leading regression and API testing for an Audio Streaming platform (optimizing performance, reducing latency, +25% user satisfaction) and end-to-end testing for an NGO Educational LMS (ensuring accessibility for underprivileged communities).</p>
+        <p>Passionate about QA—let's connect on testing challenges!</p>
     </section>
 
     <section id="skills">
@@ -116,14 +117,11 @@
             <ul>
                 <li>Exploratory Testing</li>
                 <li>Regression Testing</li>
-                <li>User Acceptance Testing (UAT)</li>
                 <li>API Testing</li>
                 <li>System Testing</li>
                 <li>Cross-Browser Testing</li>
                 <li>UI/UX Testing</li>
-                <li>Smoke Testing</li>
-                <li>Alpha Testing</li>
-                <li>End-to-End Testing</li>
+                <li>Mobile Testing</li>
             </ul>
         </div>
         
@@ -185,13 +183,13 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Feel free to reach out for collaborations or discussions!</p>
-        <p>Email: <a href="mailto:charlondalesanagustin@gmail.com">charlondalesanagustin@gmail.com</a></p>
+        <p>Email: <a href="mailto: akhtersaif66@gmail.com"></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn Profile</a></p>
-        <p>GitHub: <a href="https://github.com/charlon-dale" target="_blank">GitHub Profile</a></p>
+        <p>GitHub: <a href="https://github.com/sakhter313" target="_blank">GitHub Profile</a></p>
     </section>
 
     <footer>
-        &copy; 2026 Charlon Dale San Agustin. All rights reserved.
+        &copy; 2026 Saif Akhter. All rights reserved.
     </footer>
 
     <script>
